# serial_midi_bridge

./: .gitignore  README.md  pyproject.toml  serial_midi_bridge.py
